Force vertical scroll bar to avoid layout jump

--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -1,3 +1,7 @@
+html {
+  overflow-y: scroll;
+}
+
 body {
   /*background-color: #4B7399;*/
   font-family: Verdana, Helvetica, Arial;
